# macinput

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: agent-best-practices.md  agent-best-practices.zh-CN.md  developer-guide.md  developer-guide.zh-CN.md  mcp-engineering.md  mcp-engineering.zh-CN.md  user-guide.md  user-guide.zh-CN.md
src/macinput/: __init__.py  cli.py  keyboard.py  mouse.py  screenshot.py  server.py  settings.py
tests/: test_keyboard.py  test_mouse.py  test_server_metadata.py  test_server_tools.py  test_settings.py
